--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
   <!-- First Modal -->
 <div data-te-modal-init class="fixed left-0 top-0 z-[1055] hidden h-full w-full overflow-y-auto overflow-x-hidden outline-none" id="exampleModalFirst" tabindex="-1" aria-labelledby="exampleModalFirstLabel" aria-hidden="true">
-<div data-te-modal-dialog-ref class="pointer-events-none relative w-auto translate-y-[-50px] opacity-0 transition-all duration-300 ease-in-out min-[576px]:mx-auto min-[576px]:mt-7 min-[576px]:max-w-[650px]">
+<div data-te-modal-dialog-ref class="pointer-events-none relative w-auto translate-y-[-50px] opacity-0 transition-all duration-300 ease-in-out min-[576px]:mx-auto min-[576px]:mt-7 min-[576px]:max-w-[700px]">
   <div class="px-3 min-[576px]:shadow-[0_0.5rem_1rem_rgba(#000, 0.15)] pointer-events-auto relative flex w-full flex-col rounded-md border-none bg-white bg-clip-padding text-current shadow-lg outline-none">
     <div class="flex flex-shrink-0 items-center justify-between rounded-t-md  border-opacity-100 p-4 dark:border-opacity-50">
       <div>
@@ -213,13 +213,13 @@
         </button>
       </div>
     </div>
-    <div class="relative flex-auto p-4" data-te-modal-body-ref>
+    <div class="relative flex px-4" data-te-modal-body-ref>
       <div class="sm:flex justify-between">
 
         <div>
           <div class=" border-gray-200 border-b">
             <h3>Tokopedia</h3>
-            <div style="padding: 10px; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
+            <div style="padding: 10px; justify-content: flex-start; align-items: flex-start; gap: 18px; display: inline-flex">
               <div style="width: 20px; height: 20px; background: white; border-radius: 9999px; border: 1.50px #9AA6B0 solid"></div>
               <div style="width: 103px; height: 20px; border-radius: 5px; flex-direction: column; justify-content: center; align-items: flex-start; gap: 10px; display: inline-flex">
                   <img style="width: 67px; height: 34px" src="image/Payment method/image 138.svg" />
@@ -229,7 +229,7 @@
           </div>
           <div class="mt-7 border-gray-200 border-b">
             <h3>Credit Card</h3>
-            <div style="padding: 10px; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
+            <div style="padding: 10px; justify-content: flex-start; align-items: flex-start; gap: 14px; display: inline-flex">
               <div style="width: 20px; height: 20px; background: white; border-radius: 9999px; border: 1.50px #9AA6B0 solid"></div>
               <div style="width: 103px; height: 20px; border-radius: 5px; flex-direction: column; justify-content: center; align-items: flex-start; gap: 10px; display: inline-flex">
                   <img style="width: 50px; height: 20px" src="image/Payment method/Group 22340.svg" />
@@ -240,7 +240,7 @@
           <div class="mt-7">
             <h3>Paper usaha</h3>
             <div>
-              <div style="padding: 10px; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
+              <div style="padding: 10px; justify-content: flex-start; align-items: flex-start; gap: 18px; display: inline-flex">
                    <input onclick="show2();" style="width: 20px; height: 20px; background: white; border-radius: 9999px; border: 1.50px #9AA6B0 solid" type="radio" id="css" name="fav_language" value="CSS">
                 <div style="width: 103px; height: 20px; border-radius: 5px; flex-direction: column; justify-content: center; align-items: flex-start; gap: 10px; display: inline-flex">
                     <img style="width: 87px; height: 34px" src="image/Payment method/image 2.svg" />
@@ -262,8 +262,8 @@
               </div>
              </div>
             </div>
-            <div class="my-3">
-              <div style="padding: 10px; justify-content: flex-start; align-items: flex-start; gap: 8px; display: inline-flex">
+            <div class="my-6">
+              <div style="padding: 10px; justify-content: flex-start; align-items: flex-start; gap: 18px; display: inline-flex">
                 <input onclick="show3();" style="width: 20px; height: 20px; background: white; border-radius: 9999px; border: 1.50px #9AA6B0 solid" type="radio" id="css" name="fav_language" value="CSS">
                 <div style="width: 103px; height: 20px; border-radius: 5px; flex-direction: column; justify-content: center; align-items: flex-start; gap: 10px; display: inline-flex">
                     <img style="width: 67px; height: 18px" src="image/Payment method/image 3.svg" />
